fix dark theme looking wonky on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,9 @@
 @import "tailwindcss";
 
+@variant dark (&:where(.dark, .dark *));
+
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #111827; /* gray-900 */
+  color: #f9fafb; /* gray-50 */
 }
